Modified playbook syntax

--- a/playbook/mavenBuild.yml
+++ b/playbook/mavenBuild.yml
@@ -1,6 +1,6 @@
 ---
-name: maven build
-hosts: maven
-tasks:
-  - name: Run maven build
-    command: "/bin/bash cd /home/ubuntu/java-code/devops/ && mvn clean install"
+- name: maven build
+  hosts: maven
+  tasks:
+    - name: Run maven build
+      command: "/bin/bash cd /home/ubuntu/java-code/devops/ && mvn clean install"
