Added chdir to build and deploy playbooks and removed target folder

--- a/playbook/mavenBuild.yml
+++ b/playbook/mavenBuild.yml
@@ -5,3 +5,5 @@
   tasks:
     - name: Run maven build
       ansible.builtin.command: /opt/maven/bin/mvn clean install
+      args:
+        chdir: ../
