--- a/master.yml
+++ b/master.yml
@@ -1,10 +1,12 @@
 ---
 - name: mysql
   hosts: client
+  remote_user: ubuntu
   roles:
     - mysql
 
 - name: Dependeny Installation
   hosts: client
+  remote_user: ubuntu
   roles:
     - dependencies
