--- a/roles/dependencies/templates/nginx/wp.conf
+++ b/roles/dependencies/templates/nginx/wp.conf
@@ -1,8 +1,8 @@
 server {
   listen 80;
   listen [::]:80;
-  server_name www.example.com example.com;
-  root /usr/share/nginx/example.com/;
+  server_name _;
+  root /usr/share/nginx/wordpress/;
   index index.php index.html index.htm index.nginx-debian.html;
 
   location / {
